--- a/package.json
+++ b/package.json
@@ -74,5 +74,6 @@
     "@types/react-slick": "^0.23.4",
     "fg-loadcss": "^3.1.0",
     "prettier": "2.2.1"
-  }
+  },
+  "proxy": "https://mvti-backend.herokuapp.com"
 }
